--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ border-radius: 7.5px;
 /* timeline */
 
 .time-line{
-  margin-top: 200px;
+
    width: 100%;
    height: 500px;
    overflow: hidden;
@@ -173,17 +173,28 @@ border-radius: 7.5px;
 
 }
 .time-line hr{
-  border: 1px solid #ff0000;
-  border-style:dashed ;
+  border: 4px dashed rgba(255, 255, 255, 0.242);
+  border-radius: 0;
   height: 350px;
+  
+  border-image: initial;
+
+  
   position: relative;
- 
   
 }
 
 
+
+
+
+
+
+
+
 .time-line  hr:nth-child(1){
     transform: rotate(60deg);
+    border-color: red;
 }
 .time-line  hr:nth-child(3){
   transform: rotate(120deg);
@@ -198,14 +209,23 @@ border-radius: 7.5px;
   transform: rotate(60deg);
 }
 .time-line .box{
-  width: 40px;
-  height: 40px;
-  background-color: rgb(255, 255, 255);
+  width: 50px;
+  height: 50px;
+  background-color: rgb(98, 93, 93);
   position: relative;
   z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  font-size: 40px;
+  font-family: 'bakbak one';
+  border-radius: 3px;
 }
 .time-line .box:nth-child(2){
   top: 80px;
+  background: linear-gradient(90deg, #FF0D07 0%, #FF0359 100%);
+  border-radius: 2px;
    
 }
 .time-line .box:nth-child(4){
