--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 70px;
-  background-color: #000000b7;
+  height: 80px;
+  background-color: rgba(24, 24, 24, 0.544) ;
 }
 .nav-menu {
   display: flex;
@@ -32,7 +32,7 @@ body {
   align-items: center;
   width: 100%;
   margin-right: 200px;
-  padding: 0.7rem;
+  padding: 0.9rem;
   gap: 6.8rem;
   position: inherit;
   top: inherit;
@@ -43,7 +43,7 @@ body {
   width: 100%;
   max-width: 230px;
   position: fixed;
-  top: 20px;
+  top: 23px;
 
   left: 5%;
 }
@@ -86,7 +86,7 @@ body {
   position: absolute;
   gap: 3rem;
   top: 35rem;
-  right: 23%;
+  right: 26.5%;
 }
 
 .home img {
@@ -94,36 +94,51 @@ body {
   top: 14rem;
   width: 600px;
 }
-.home h1 {
-  font-size: 4rem;
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  gap: 1rem;
-  top: 14rem;
-  color: #fff;
-  font-family: "bakbak one";
-  font-weight: 100;
-  text-shadow: 0px 0px 8px #000000;
-}
+.home h1  {
+    font-size: 4rem;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    gap: 1rem;
+    top: 14rem;
+    left: 100px;
+    font-family: "bakbak one";
+    background: linear-gradient(180deg, #FD8033 0%, #FCD775 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: transparent;
+    font-weight: 100;
+    line-height: 70px;
+    text-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+  }
+  
+
+
 .home .button1 {
   box-sizing: border-box;
   width: 11.25rem;
   height: 3.375rem;
-  border: 0.188rem solid #ffffff;
-  border-radius: 0.469rem;
-  color: white;
+
+  color: rgb(0, 0, 0);
   background-color: rgba(255, 255, 255, 0.049);
   font-family: "gugi";
   cursor: pointer;
+  background: #FFFFFF;
+  border: 3px solid #000000;
+  box-shadow: inset 0px -4px 0px #251B1B, inset 0px 4px 0px #27091B;
+
 }
 
 .home .button2 {
   width: 11.25rem;
   height: 3.375rem;
-  background: #ffffff;
-  border-radius: 0.469rem;
+  color :white;
+  font-family: "gugi";
+
   cursor: pointer;
+  background: linear-gradient(90deg, #FF0D07 0%, #FF0359 100%);
+  border: 3px solid #000000;
+  box-shadow: inset 0px -4px 0px #8D0D0D, inset 0px 4px 0px #EB299D;
 }
 
 /* hackathon */
@@ -178,7 +193,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 7rem;
-  margin: 12.5rem 1rem;
+  margin: 1rem 1rem 12.5rem 1rem;
 }
 
 .logos img {
@@ -190,7 +205,7 @@ body {
 /* timeline */
 .timelineContainer {
   position: relative;
-  height: 700vmax;
+  height: 400vh;
   overflow: clip;
 }
 
