--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Gugi&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap");
-
+html{
+  scroll-behavior: smooth;
+}
 body {
   background-color: rgb(0, 0, 0);
   margin: 0;
@@ -134,7 +136,6 @@ body {
   height: 3.375rem;
   color :white;
   font-family: "gugi";
-
   cursor: pointer;
   background: linear-gradient(90deg, #FF0D07 0%, #FF0359 100%);
   border: 3px solid #000000;
@@ -422,8 +423,12 @@ body {
   padding: 20px;
   max-width: 100%;
   margin: 200px;
-  margin-top: 0;
+  margin-bottom: 100px;
+  margin-top: -200px;
   font-family: "gugi";
+  position: relative;
+  z-index: 2;
+
 }
 
 .faq-item {
