--- a/src/index.css
+++ b/src/index.css
@@ -377,13 +377,14 @@ body {
 /* stacks*/
 .stacks {
   margin: 150px;
-  margin-top: 0;
+  margin-top: -200px;
 }
 
 .stacks .heading {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  
 }
 .stacks button {
   box-sizing: border-box;
@@ -424,7 +425,7 @@ body {
   max-width: 100%;
   margin: 200px;
   margin-bottom: 100px;
-  margin-top: -200px;
+  margin-top: 10px;
   font-family: "gugi";
   position: relative;
   z-index: 2;
@@ -559,27 +560,28 @@ body {
 .support-sections {
   display: flex;
   justify-content: center;
-  gap: 50px;
+  gap: 60px;
   margin-top: 40px;
 }
 
 .support-section {
   background-color: #1e1e1e;
-  padding: 20px;
+  padding: 60px;
   border-radius: 8px;
-  width: 300px;
+  width: 380px;
 }
 
 .support-section h3 {
   margin-bottom: 25px;
   font-family: "bakbak one";
   font-weight: 100;
+  font-size: 1.5rem;
 }
 
 .support-section p {
   margin: 19px;
   font-family: "gugi";
-  font-size: 11px;
+  font-size: 0.9rem;
   line-height: 19px;
   text-align: justify;
 }
@@ -609,6 +611,7 @@ body {
   font-family: "gugi";
   text-align: justify;
   line-height: 28px;
+  width: 650px;
 }
 .contact-details {
   display: flex;
