--- a/src/index.css
+++ b/src/index.css
@@ -111,8 +111,10 @@ body {
 .home .herotext {
   position: absolute;
   gap: 1rem;
-  top: 10rem;
-  left: 20vw;
+  top: 20%;
+  margin-left: 20%;
+  margin-right: 80%;
+ 
 }
 
 .home h1 {
@@ -682,4 +684,113 @@ body {
 
 .connect-image {
   height: 400px;
+}
+
+
+/*contact us*/
+
+.containerX {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+
+.containerX h1 {
+  font-family: 'Bakbak One', cursive;
+  font-size: 52px;
+  font-weight: 400;
+  line-height: 100.8px;
+  text-align: center;
+  color: #fff;
+}
+
+.containerX h1 span {
+  color: #ef0e06;
+}
+
+.containerX p {
+  font-family: 'Gugi', cursive;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 35px;
+  text-align: center;
+  color: #fff;
+}
+
+.containerX .form-group {
+  margin-bottom: 20px;
+}
+
+
+.containerX .row {
+  display: flex;
+  justify-content: space-between;
+ 
+  
+}
+
+
+.containerX input, select, textarea {
+  width: calc(50% - 10px);
+  padding: 19px;
+  margin: 5px;
+  
+  box-sizing: border-box;
+  background: #0D0D0D;
+  color: #fff;
+  border: none;
+}
+.containerX input{
+  width: 100%;
+}
+
+.containerX textarea {
+  width: 100%;
+  height: 235px;
+  padding: 34px 48px 171px 48px;
+  border-radius: 0px 0px 0px 0px;
+  opacity: 1;
+}
+
+.containerX select {
+  width: calc(50% - 10px);
+  height: 60px;
+  padding: 10px;
+  border-radius: 0px 0px 0px 0px;
+}
+
+input[type="submit"] {
+  box-sizing: border-box;
+  width: 180px;
+  height: 54px;
+  border: 3px solid #ffffff;
+  border-radius: 7.5px;
+  color: rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0.464);
+  font-family: "gugi";
+  cursor: pointer;
+ 
+}
+
+.containerX footer {
+  text-align: center;
+  margin-top: 40px;
+}
+
+
+.footer-links, .social-media, .contact-info {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 20px;
+}
+
+.footer-links ul, .social-media ul, .contact-info ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer-links a, .social-media a, .contact-info a {
+  color: #fff;
+  text-decoration: none;
 }
