--- a/src/index.css
+++ b/src/index.css
@@ -826,7 +826,7 @@ input[type="submit"] {
     width: 100%;
     justify-content:end ;
     align-items: center;
-    padding: 12px;
+    padding: 12px 0;
     
   }
   .bgimage{
