--- a/src/index.css
+++ b/src/index.css
@@ -925,7 +925,9 @@ input[type="submit"] {
       margin-top: 0;
     }
   }
-
+ .timelineContainer{
+  height: 150vh;
+ }
 
   .time-line img{
     display: none;
