--- a/src/index.css
+++ b/src/index.css
@@ -1,983 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Gugi&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Bakbak+One&display=swap");
-@import "./components/Fonts/font.css";
-html {
-  scroll-behavior: smooth;
-}
-body {
-  background-color: rgb(0, 0, 0);
-  margin: 0;
-}
-
-.bgimage {
-
-  height: 110vh;
-  background-size: fit;
-  background-position: center;
-  opacity: 0.75;
-}
-
-/*Navbar*/
-
-.navbar {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  position: sticky;
-  width: 100%;
-  height: 80px;
-  background-color: rgba(24, 24, 24, 0.544);
-}
-
-.nav-menu {
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  width: 100%;
-  margin-right: 200px;
-  padding: 0.9rem;
-  gap: 6.8rem;
-  position: inherit;
-  top: inherit;
-  list-style: none;
-}
-
-.nav-menu img {
-  width: 100%;
-  max-width: 230px;
-  position: fixed;
-  top: 23px;
-
-  left: 5%;
-}
-
-.nav-link {
-  font-size: 0.8rem;
-  font-weight: 500;
-  color: #ffffff;
-  transition: all ease-in-out 0.2s;
-  text-decoration: none;
-  font-family: "gugi";
-}
-
-.nav-link:hover {
-  letter-spacing: 0.5px;
-}
-
-.navbar button {
-  padding: 12px 24px;
-  border-radius: 08px;
-  background: linear-gradient(90deg, #ff0d07 0%, #ff0359 100%);
-  border: 0;
-  cursor: pointer;
-  color: white;
-}
-
-.navbar button:hover {
-  transform: scale(1);
-}
-.nav-toggle {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.nav-toggle span {
-  background: #fff;
-  margin: 4px 0;
-  width: 25px;
-  height: 2px;
-  transition: all 0.3s ease;
-}
-/*landing*/
-.home {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-/* .home .subtext {
-  position: absolute;
-  top: 30rem;
-  font-size: 1rem;
-  color: #ffffff;
-} */
-.home .button-container {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  position: absolute;
-  gap: 3rem;
-  top: 35rem;
-}
-
-.home img {
-  position: absolute;
-  top: 14rem;
-  width: 600px;
-}
-
-.home .herotext {
-  position: absolute;
-  gap: 1rem;
-  top: 20%;
-  margin-left: 20%;
-  margin-right: 80%;
-}
-
-.home h1 {
-  font-size: 6rem;
-  font-family: "Minecraft";
-  font-weight: 100;
-  line-height: 120px;
-  text-align: center;
-  width: max-content;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.home .Orginal {
-  background: linear-gradient(180deg, #fd8033 0%, #fcd775 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: transparent;
-  z-index: 10;
-  /* text-shadow: 0px 10px 0px #46000a; */
-}
-
-.home .Wrapper {
-  text-shadow: 0px 10px 0px #46000a;
-}
-
-.home .button1 {
-  width: 11.25rem;
-  height: 3.375rem;
-  color: white;
-  font-family: "gugi";
-  cursor: pointer;
-  background: linear-gradient(90deg, #ff0d07 0%, #ff0359 100%);
-  border: 3px solid #000000;
-  box-shadow: inset 0px -1px 0px #ff0359, inset 0px 1px 0px #ff0d07;
-}
-
-.home .button2 {
-  width: 11.25rem;
-  height: 3.375rem;
-  color: white;
-  font-family: "gugi";
-  cursor: pointer;
-  background: linear-gradient(90deg, #ff0d07 0%, #ff0359 100%);
-  border: 3px solid #000000;
-  box-shadow: inset 0px -1px 0px #ff0359, inset 0px 1px 0px #ff0d07;
-}
-
-/* hackathon */
-.hack {
-  display: flex;
-  justify-content: center;
-  color: white;
-  font-family: "gugi";
-  gap: 100px;
-  gap: 3rem;
-  /* Relative gap */
-  margin: 8rem;
-}
-
-.hack .mine {
-  width: 100%;
-  max-width: 500px;
-}
-
-.hack .details h1 {
-  font-size: 2.563rem;
-  font-family: "bakbak one";
-  font-weight: 100;
-}
-
-.hack .details p {
-  font-size: 0.875rem;
-  line-height: 1.75rem;
-  text-align: justify;
-  padding-right: 5rem;
-}
-
-.hack .details ul {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  gap: 0.625rem;
-  padding: 0;
-}
-
-.hack .details img {
-  width: 2.188rem;
-  height: 2.5rem;
-}
-
-.details li {
-  display: flex;
-  align-items: center;
-  gap: 1.25rem;
-}
-
-/* logos */
-
-.logos {
-  display: grid;
-  flex-wrap: wrap;
-  grid-template-columns: repeat(4, 1fr);
-  justify-content: center;
-  gap: 7rem;
-  align-items: center;
-}
-
-.logos img {
-  width: 100%;
-  max-width: 230px;
-  cursor: pointer;
-  justify-self: center;
-}
-.logos img:nth-child(1) {
-  width: 180px;
-}
-.logohead {
-  display: flex;
-  color: white;
-  justify-content: center;
-}
-.logohead h1 {
-  font-family: "bakbak one";
-  font-weight: 100;
-  font-size: 50px;
-}
-
-/* timeline */
-.timelineContainer {
-  position: relative;
-  height: 400vh;
-  overflow: clip;
-}
-
-.time-line {
-  width: 100vw;
-
-  display: flex;
-  justify-content: flex-start;
-}
-
-.time-line hr {
-  border: 4px dashed rgba(255, 255, 255, 0.242);
-  border-radius: 0;
-  height: 350px;
-  position: relative;
-}
-
-.time-line hr:nth-child(1) {
-  transform: rotate(60deg);
-}
-
-.time-line hr:nth-child(3) {
-  transform: rotate(120deg);
-}
-
-.time-line hr:nth-child(5) {
-  transform: rotate(60deg);
-}
-
-.time-line hr:nth-child(7) {
-  transform: rotate(120deg);
-}
-
-.time-line hr:nth-child(9) {
-  transform: rotate(60deg);
-}
-
-.time-line .box {
-  width: 50px;
-  height: 50px;
-  background-color: rgb(98, 93, 93);
-  position: absolute;
-  z-index: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #ffffff;
-  font-size: 40px;
-  font-family: "bakbak one";
-  border-radius: 3px;
-}
-
-.time-line .text {
-  position: absolute;
-  max-width: 30ch;
-}
-
-/* .time-line .box:nth-child(2){
-  top: 80px;
-  background: linear-gradient(90deg, #FF0D07 0%, #FF0359 100%);
-  border-radius: 2px;
-   
-}
-.time-line .box:nth-child(4){
-  top: 250px;
-   
-}
-.time-line .box:nth-child(6){
-  top: 80px;
-   
-}
-.time-line .box:nth-child(8){
-  top: 250px;
-   
-} */
-
-/*sponsor us*/
-
-/*why sponsor us?"*/
-
-.section-hero {
-  display: flex;
-  align-items: center;
-
-  gap: 150px;
-  /* Gap between image and text */
-  margin: 100px 180px 100px 0;
-}
-
-.section-hero img {
-  margin-left: 50px;
-  margin-top: 50px;
-  width: 517px;
-  height: auto;
-}
-
-.section-hero h1 {
-  font-size: 41px;
-  font-weight: 100;
-  font-family: "bakbak one";
-  color: #ffffff;
-}
-
-.section-hero span {
-  font-size: 41px;
-  font-weight: 100;
-  color: red;
-}
-
-.section-hero .text p {
-  font-size: 16px;
-  line-height: 1.6;
-  color: #ffffff;
-  font-family: "gugi";
-  text-align: justify;
-  line-height: 28px;
-}
-
-.button {
-  padding: 10px 20px;
-  background-color: #ffffffdd;
-  color: black;
-  border: none;
-  cursor: pointer;
-  font-size: 16px;
-  border-radius: 5px;
-  font-family: "gugi";
-}
-
-/* perks */
-
-.section-perks {
-  display: flex;
-  align-items: center;
-  margin: 100px 0 100px 180px;
-  gap: 100px;
-  /* Gap between image and perk list */
-  color: white;
-  font-family: "bakbak one";
-  text-align: justify;
-}
-
-.perk-list h1 {
-  text-align: left;
-  font-size: 41px;
-  font-weight: 100;
-  margin-bottom: 40px;
-}
-
-.perk-list h1 span {
-  font-size: 41px;
-  font-weight: 100;
-  color: red;
-}
-
-.perk {
-  margin-bottom: 20px;
-}
-
-.perk h3 {
-  font-size: 20px;
-  margin-bottom: 10px;
-  font-weight: 100;
-}
-
-.perk p {
-  font-size: 14px;
-  line-height: 1.6;
-  font-family: "gugi";
-  text-align: justify;
-  width: 500px;
-}
-
-.perk-img {
-  margin-left: 20px;
-  width: 500px;
-  height: auto;
-}
-
-/* stacks*/
-.stacks {
-  margin: 150px;
-  margin-top: -200px;
-}
-
-.stacks .heading {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.stacks button {
-  box-sizing: border-box;
-  width: 150px;
-  height: 44px;
-  border: 3px solid #ffffff;
-  border-radius: 7.5px;
-  color: rgb(255, 255, 255);
-  background-color: rgba(0, 0, 0, 0.464);
-  font-family: "gugi";
-  cursor: pointer;
-}
-
-.stacks-each {
-  display: flex;
-  justify-content: space-between;
-
-  margin-top: 50px;
-}
-
-.stacks p {
-  color: white;
-}
-
-.stacks-each .each-stack {
-  width: 240px;
-  height: 240px;
-  background-color: rgba(255, 255, 255, 0.082);
-  border-radius: 20px;
-}
-
-/* faq*/
-
-.faq-container {
-  background-color: #000;
-  color: #fff;
-  font-family: Arial, sans-serif;
-  padding: 20px;
-  max-width: 100%;
-  margin: 200px;
-  margin-bottom: 100px;
-  margin-top: 10px;
-  font-family: "gugi";
-  position: relative;
-  z-index: 2;
-}
-
-.faq-item {
-  border: 1px solid #444;
-  margin: 10px 0;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.faq-question {
-  background-color: #333;
-  padding: 15px;
-  display: flex;
-  justify-content: space-between;
-  cursor: pointer;
-}
-
-.faq-answer {
-  background-color: #222;
-  padding: 15px;
-}
-
-.faq-footer {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.faq-footer h2 {
-  margin-bottom: 10px;
-  font-family: "bakbak one";
-  font-weight: 100;
-}
-
-.faq-footer p {
-  margin-bottom: 20px;
-  font-family: "gugi";
-}
-
-.faq-footer button {
-  box-sizing: border-box;
-  width: 180px;
-  height: 54px;
-  border: 3px solid #ffffff;
-  border-radius: 7.5px;
-  color: white;
-  background-color: rgba(255, 255, 255, 0.049);
-  font-family: "gugi";
-  cursor: pointer;
-}
-
-.faq-footer button:hover {
-  background-color: #000000;
-}
-
-/*footer*/
-
-.footer {
-  background-color: #181818;
-  color: #fff;
-  padding: 20px 0;
-}
-
-.footer-content {
-  display: flex;
-  justify-content: space-around;
-  padding: 20px;
-  align-items: center;
-}
-
-.footer h2 {
-  font-size: 18px;
-  margin-bottom: 10px;
-  font-family: "bakbak one";
-  font-weight: 100;
-}
-
-.footer ul {
-  list-style: none;
-  padding: 0;
-  font-family: "gugi";
-}
-
-.footer ul li {
-  margin-bottom: 10px;
-  font-size: 13px;
-}
-
-.footer ul li a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer ul li a:hover {
-  text-decoration: underline;
-}
-
-.footer-bottom {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 20px;
-  border-top: 1px solid #444;
-}
-
-.footer-bottom a {
-  color: #fff;
-  text-decoration: none;
-}
-
-.footer-bottom a:hover {
-  text-decoration: underline;
-}
-
-.footer img {
-  width: 230px;
-}
-
-/*contibute*/
-
-.support-container {
-  background-color: #000;
-  color: #fff;
-  margin: 100px;
-  text-align: center;
-}
-
-.support-container .highlight {
-  color: #ff0000;
-}
-
-.support-sections {
-  display: flex;
-  justify-content: center;
-  gap: 60px;
-  margin-top: 40px;
-}
-
-.support-section {
-  background-color: #1e1e1e;
-  padding: 60px;
-  border-radius: 8px;
-  width: 380px;
-}
-
-.support-section h3 {
-  margin-bottom: 25px;
-  font-family: "bakbak one";
-  font-weight: 100;
-  font-size: 1.5rem;
-}
-
-.support-section p {
-  margin: 19px;
-  font-family: "gugi";
-  font-size: 0.9rem;
-  line-height: 19px;
-  text-align: justify;
-}
-
-/*connect*/
-.connect-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.text-container {
-  max-width: 600px;
-}
-
-.text-container h1 {
-  font-size: 41px;
-  color: red;
-  font-family: "Bakbak One";
-  font-weight: 100;
-}
-
-.text-container p {
-  font-size: 16px;
-  line-height: 1.6;
-  color: #ffffff;
-  font-family: "gugi";
-  text-align: justify;
-  line-height: 28px;
-  width: 650px;
-}
-
-.contact-details {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  max-width: 400px;
-}
-
-.contact-item {
-  margin-right: 16px;
-}
-
-.contact-item strong {
-  display: block;
-  margin-bottom: 5px;
-  font-size: 16px;
-}
-
-.instagram-icon {
-  color: #fff;
-  text-decoration: none;
-  font-size: 2em;
-}
-
-.connect-image {
-  height: 400px;
-}
-
-/*contact us*/
-
-.containerX {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
-}
-
-.containerX h1 {
-  font-family: "Bakbak One", cursive;
-  font-size: 52px;
-  font-weight: 400;
-  line-height: 100.8px;
-  text-align: center;
-  color: #fff;
-}
-
-.containerX h1 span {
-  color: #ef0e06;
-}
-
-.containerX p {
-  font-family: "Gugi", cursive;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 35px;
-  text-align: center;
-  color: #fff;
-}
-
-.containerX .form-group {
-  margin-bottom: 20px;
-}
-
-.containerX .row {
-  display: flex;
-  justify-content: space-between;
-}
-
-.containerX input,
-select,
-textarea {
-  width: calc(50% - 10px);
-  padding: 19px;
-  margin: 5px;
-
-  box-sizing: border-box;
-  background: #0d0d0d;
-  color: #fff;
-  border: none;
-}
-.containerX input {
-  width: 100%;
-}
-
-.containerX textarea {
-  width: 100%;
-  height: 235px;
-  padding: 34px 48px 171px 48px;
-  border-radius: 0px 0px 0px 0px;
-  opacity: 1;
-}
-
-.containerX select {
-  width: calc(50% - 10px);
-  height: 60px;
-  padding: 10px;
-  border-radius: 0px 0px 0px 0px;
-}
-
-input[type="submit"] {
-  box-sizing: border-box;
-  width: 180px;
-  height: 54px;
-  border: 3px solid #ffffff;
-  border-radius: 7.5px;
-  color: rgb(255, 255, 255);
-  background-color: rgba(0, 0, 0, 0.464);
-  font-family: "gugi";
-  cursor: pointer;
-}
-
-.containerX footer {
-  text-align: center;
-  margin-top: 40px;
-}
-
-.footer-links,
-.social-media,
-.contact-info {
-  display: inline-block;
-  vertical-align: top;
-  margin: 0 20px;
-}
-
-.footer-links ul,
-.social-media ul,
-.contact-info ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.footer-links a,
-.social-media a,
-.contact-info a {
-  color: #fff;
-  text-decoration: none;
-}
-.nav-toggle {
-  display: none;
-  flex-direction: column;
-  cursor: pointer;
-}
-
-.nav-toggle span {
-  background: #fff;
-  margin: 4px 0;
-  width: 25px;
-  height: 2px;
-  transition: all 0.3s ease;
-}
-@media (max-width: 768px) {
-  .navbar {
-    width: 100%;
-    justify-content: end;
-    align-items: center;
-    height: 60px;
-  }
-  .bgimage {
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  .nav-menu {
-    background: rgba(24, 24, 24, 0.9);
-    position: fixed;
-    left: -100%;
-    top: 0;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #0f1923;
-    width: 260px;
-    height: 100vh;
-    text-align: center;
-    transition: 0.3s;
-
-    gap: 60px;
-  }
-
-  .nav-menu.active {
-    left: 0;
-    z-index: 10;
-    top: -22px;
-  }
-
-  .nav-toggle {
-    display: flex;
-    margin-right: 20px;
-  }
-
-  .nav-toggle.open span:nth-child(1) {
-    transform: rotate(45deg) translateY(13px) translateX(4px);
-    width: 37px;
-  }
-
-  .nav-toggle.open span:nth-child(2) {
-    opacity: 0;
-  }
-
-  .nav-toggle.open span:nth-child(3) {
-    transform: rotate(-45deg) translateY(-10px);
-    width: 37px;
-  }
-
-  .nav-link {
-    font-size: 1rem;
-    margin: 0;
-  }
-
-  .nav-menu img {
-    position: static;
-    max-width: 180px;
-  }
-  .home .button-container {
-    z-index: -1;
-    top: 59%;
-  }
-  .logos {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 0;
-  }
-  .logos img {
-    width: 130px;
-    justify-self: center;
-  }
-  .logos img:nth-child(1) {
-    width: 110px;
-  }
-  .home .button1 {
-    padding: 0.8rem;
-    font-size: 1rem;
-    font-family: "gugi";
-  }
-
-  .home .button2 {
-    width: auto;
-    height: auto;
-    padding: 0.8rem;
-
-    #overview {
-      margin-top: 0;
-    }
-  }
- .timelineContainer{
-  height: 150vh;
- }
-
-  .time-line img{
-    display: none;
-  }
-  .footer img {
-    display: none;
-  }
-  .home h1 {
-    font-size: 2rem;
-    line-height: 30px;
-    margin-left: 0;
-  }
-  .home .Wrapper {
-    display: none;
-  }
-  .home .herotext {
-    z-index: -1;
-    margin: 35px;
-    left: 0;
-    top: 28%;
-  }
-
-  .faq-container {
-    margin: 0;
-  }
-  .stacks {
-    margin: 0;
-  }
-  .footer-links,
-  .social-media,
-  .contact-info {
-    margin: -3px 0px;
-  }
-  .hack .mine {
-    display: none;
-  }
-  .hack {
-    margin: 0;
-    padding: 15px;
-  }
-  .hack .details h1 {
-    font-size: 2rem;
-  }
-  .hack .details p {
-    padding-right: 0;
-  }
-  .logohead {
-    text-align: center;
-  }
-  .logohead h1 {
-    font-size: 2rem;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
